fixed menu overlapping issue on all pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -355,6 +355,10 @@ body {
   overflow-x: hidden;
 }
 
+main {
+  margin-top: 6em;
+}
+
 /* Element Styling */
 .primaryButton {
   padding: 8px;
@@ -673,11 +677,11 @@ header div input {
 /* Footer */
 /* Form */
 #form-h1-container {
-  display: flex;
-  justify-content: center;
+  display: block;
+  text-align: center;
 }
 
-#form-h1 {
+.form-h1 {
   margin: 2em 0;
 }
 
